# discogs-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  cliff.toml  justfile  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
examples/: advanced.py  async_usage.py  authentication.py  collection.py  database.py  marketplace.py  quickstart.py
scripts/: generate_sync.py  verify_oauth.py
src/discogs_sdk/: __init__.py  _base_client.py  _cache.py  _exceptions.py  oauth.py
src/discogs_sdk/_async/: __init__.py  _client.py  _lazy.py  _oauth.py  _paginator.py  _resource.py
src/discogs_sdk/_async/resources/: __init__.py  artists.py  collection.py  exports.py  labels.py  lists.py  marketplace.py  masters.py  releases.py  search.py  uploads.py  users.py  wantlist.py
src/discogs_sdk/_sync/: __init__.py  _client.py  _lazy.py  _oauth.py  _paginator.py  _resource.py
src/discogs_sdk/_sync/resources/: __init__.py  artists.py  collection.py  exports.py  labels.py  (+8 more)
src/discogs_sdk/models/: __init__.py  _common.py  artist.py  collection.py  export.py  label.py  list_.py  marketplace.py  master.py  release.py  search.py  upload.py  user.py  wantlist.py
tests/: conftest.py  test_cache.py  test_examples.py  test_model_aliases.py  test_oauth_reexport.py
tests/async/: conftest.py  test_artists.py  test_base_client.py  test_client.py  test_collection.py  test_exceptions.py  test_exports.py  test_labels.py  test_lazy.py  test_lists.py  test_logging.py  test_marketplace.py  test_masters.py  test_oauth.py  test_paginator.py  test_releases.py  test_retry.py  test_search.py  test_uploads.py  test_users.py  test_wantlist.py
tests/integration/: conftest.py  test_collection.py  test_database.py  test_marketplace.py  test_oauth.py  test_search.py  test_subresources.py  test_user.py  test_wantlist.py
tests/sync/: conftest.py  test_artists.py  test_base_client.py  test_client.py  test_collection.py  test_exports.py  test_labels.py  test_lazy.py  test_lists.py  test_logging.py  test_marketplace.py  test_masters.py  test_oauth.py  test_paginator.py  test_releases.py  test_retry.py  test_search.py  test_uploads.py  test_users.py  test_wantlist.py
